welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(101)
 required: Boolean
  if (89<n<101 || 189<n<211){
           ^nearHundred:2: error: type mismatch;
 found   : Int(211)
 required: Boolean
  if (89<n<101 || 189<n<211){
                        ^