welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if (89<n<101 || 189<n<211){
    return true
  }
  else {
    return false
  }
}